--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 reverse functions of jump_table_040E
 
+- debug 35B0 vulture
+- see when call animate_vultures 1 or 2 (nb of remaining vultures?)
 
 - debug copy_bank (2player)
 
