more RE, bugfixes but still the same bugs

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@
 - handle_player_shot_0930: value of a0/a1 on entering?
 - space debris when killed appear but flicker
 - vultures don't shoot
-- vultures lowering all the time, should go up from time to time
+- vultures lowering all the time, should go up from time to time: check handle_vultures_y_2600
 - boss: completely crashes
 - hit by missiles with shield: illegal?? reproduce??
 - special explosions (flame split) don't work, score remains on screen
