--- a/TODO.txt
+++ b/TODO.txt
@@ -3,11 +3,9 @@ logic:
 - debug copy_bank (2player)
 
 - handle_player_shot_0930: value of a0/a1 on entering?
-- space debris when killed app: appear but flicker
-- vultures don't shoot: check unknown_439E/unknown_439F 
 - vultures lowering all the time, should go up from time to time: check handle_vultures_y_2600
   when going up, often locked by random +0 values!!
-- boss: crashes after scrolling the boss: character update issue
+- boss: can't shoot the shield (birds ok, purple strip ok)
 - hit by missiles with shield: illegal?? reproduce??
 - special explosions (flame split) don't work, score remains on screen
   (birds & vultures)
@@ -17,14 +15,15 @@ colors:
 - title: reinstate the light pink for the (c) sign instead: "F4CDCF":"FFFFFF" when 4008=$79
   of white
 - create a 16+16 AGA DPF version
+- stage 3 first vulture ship loses yellow color
 
 original game bugs:
 
 - updating highscore is to be done in real-time not when restarting a game
 - applied Don Hodges fix to avoid score corruption when shooting 3 flying birds
   
-converter: ADD     $DE] => add 0xA1 !!!!
-
+converter: ADD     $DE] => add 0xA1 !!!! 38ac
+!!!!move.b	#0xa4,d6                        	| [$22d9: LD      L,$BC]
 detect: | [$3960: LD      A,L]
         | [$3961: ADD     $05]
         | [$3963: LD      L,A]
