--- a/TODO.txt
+++ b/TODO.txt
@@ -1,21 +1,20 @@
 logic:
 
-- debug copy_bank (2player)
-
 - handle_player_shot_0930: value of a0/a1 on entering?
+- player killed: debris not erased (lower fore screen not erased? debug)
 - vultures lowering all the time, should go up from time to time: check handle_vultures_y_2600
   when going up, often locked by random +0 values!!
 - boss: can't shoot the shield (birds ok, purple strip ok)
 - hit by missiles with shield: illegal?? reproduce??
 - special explosions (flame split) don't work, score remains on screen
   (birds & vultures)
+- debug copy_bank (2player)
 
 colors:
 
 - title: reinstate the light pink for the (c) sign instead: "F4CDCF":"FFFFFF" when 4008=$79
   of white
 - create a 16+16 AGA DPF version
-- stage 3 first vulture ship loses yellow color
 
 original game bugs:
 
