--- a/TODO.txt
+++ b/TODO.txt
@@ -6,8 +6,7 @@ logic:
   when going up, often locked by random +0 values!!
 - boss: can't shoot the shield (birds ok, purple strip ok)
 - hit by missiles with shield: illegal?? reproduce??
-- special explosions (flame split) don't work, score remains on screen
-  (birds & vultures)
+- special explosions (flame split) not erased, score remains on screen
 - debug copy_bank (2player)
 
 colors:
