--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,12 @@
 logic:
 
 - handle_player_shot_0930: value of a0/a1 on entering?
-- vultures lowering all the time, should go up from time to time: check handle_vultures_y_2600
-  when going up, often locked by random +0 values!!
-- boss: can't shoot the shield (birds ok, purple strip ok)
+- center digit of awarded vulture score sometimes bogus, seems to
+  be able to corrupt main score for a while too
+- boss killed: score not centered on screen
 - hit by missiles with shield: illegal?? reproduce??
 - debug copy_bank (2player)
+- 60Hz
 
 colors:
 
