a few more fixes

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,13 @@
 logic:
 
-- handle_player_shot_0930: value of a0/a1 on entering?
+- game_in_play_43A2 to allow credit / start
+- check demo ship moving?
 - center digit of awarded vulture score sometimes bogus, seems to
-  be able to corrupt main score for a while too
-- boss killed: score not centered on screen
+  be able to corrupt main score for a while too (DAA issue)
+- boss killed: score not centered on screen can be bogus (DAA missing?)
+- when restarting, status bar is erased at first
 - hit by missiles with shield: illegal?? reproduce??
-- debug copy_bank (2player)
+- debug copy_bank (2player) atm 2P disabled
 - 60Hz
 
 colors:
