--- a/TODO.txt
+++ b/TODO.txt
@@ -2,13 +2,8 @@ logic:
 
 - 2P mode switch: videoram seems not updated! check address of say
   lives and check value (42C2=7F)
-- On the attract sequence, with the final boss and 1 alien flying around,
+- Minor: On the attract sequence, with the final boss and 1 alien flying around,
   when alien is destroyed the explosion does not disappear and is left as part of the background, so to speak. 
-
-colors:
-
-- palette is completely off after one round of demo (title)
-  original game displays demo title with alternate palette
 
 
   
