--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 logic:
 
+- shots reappear at least on a plane on top: increase foreground plane height
+- shield inefficient against boss shots??
 - Minor: On the attract sequence, with the final boss and 1 alien flying around,
   when alien is destroyed the explosion does not disappear and is left as part of the background, so to speak. 
 
