--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 logic:
 
+- osd_break called when playing (1st level) probably assertion failed
 - 60Hz? or 50Hz?
 - shield inefficient against boss shots??
 - Minor: On the attract sequence, with the final boss and 1 alien flying around,
